--- a/api/openapi/api.yaml
+++ b/api/openapi/api.yaml
@@ -161,7 +161,7 @@ paths:
           name: input_token
           schema:
             type: string
-            nullable: true
+            nullable: false
           description: Token
           required: true
       operationId: api.routes.submit_manifest_route
