--- a/api/openapi/api.yaml
+++ b/api/openapi/api.yaml
@@ -167,11 +167,11 @@ paths:
       operationId: api.routes.submit_manifest_route
       responses:
         "200":
-          description: Manifest submitted
+          description: Manifest submitted. Synapse ID returned. 
           content:
             application/json:
               schema:
-                type: boolean
+                type: string
         "500":
           description: Check schematic log
       tags:
